--- a/contrib/ChangeLog
+++ b/contrib/ChangeLog
@@ -1,4 +1,9 @@
-2020-03-12  Release Manager
+2020-04-16  Jakub Jelinek  <jakub@redhat.com>
+
+	PR bootstrap/92008
+	* gcc_update: Add intl/plural.y dependency for intl/plural-config.h.
+
+2020-04-03  Martin Liska  <mliska@suse.cz>
 
 	* GCC 9.3.0 released.
 
